--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 3.10)
 project(cla-collection)
-add_executable(replacer src/replacer.c)
+add_executable(logger src/logger.c src/replacer.c)
