reads now config file and implements xml-parser libary§

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "files.associations": {
-    "regex.h": "c"
-  }
+    "regex.h": "c",
+    "parser.h": "c"
+  },
+  "C_Cpp.errorSquiggles": "enabled"
 }
