unfished fix of importing the xml file and providing it to the parser

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "files.associations": {
     "regex.h": "c",
-    "parser.h": "c"
+    "parser.h": "c",
+    "xmlmemory.h": "c"
   },
   "C_Cpp.errorSquiggles": "enabled"
 }
