--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(cla-collection)
 find_package(LibXml2 REQUIRED)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/ ${LIBXML2_INCLUDE_DIR})
+include_directories(/etc/xml/)
 add_executable(readconfig src/logger.c src/replacer.c src/readconfig.c)
 target_link_libraries(readconfig ${LIBXML2_LIBARIES})
