--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "files.associations": {
     "regex.h": "c",
     "parser.h": "c",
-    "xmlmemory.h": "c"
+    "xmlmemory.h": "c",
+    "libs.h": "c"
   },
   "C_Cpp.errorSquiggles": "enabled"
 }
