implements checkCategoriesNode function to iterate over all elements and return a node with a specific attribute

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "regex.h": "c",
     "parser.h": "c",
     "xmlmemory.h": "c",
-    "libs.h": "c"
+    "libs.h": "c",
+    "loggerlib.h": "c"
   },
   "C_Cpp.errorSquiggles": "enabled"
 }
