introduces the first working version of log2console

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 project(cla-collection)
 find_package(LibXml2 REQUIRED)
-add_executable(readconfig src/logger.c src/replacer.c src/readconfig.c)
+add_executable(readconfig src/replacer.c src/readconfig.c src/logger.c)
 target_link_libraries(readconfig PUBLIC LibXml2::LibXml2)
